# gimp-plugin-colors-threshold

./: AUTHORS  ChangeLog  HACKING  README.md  autogen.sh  colors_bimod.py  configure.ac
help/en/: index.html
plug-ins/: colors_bimod.py  colors_dith.py  colors_quant.py
po/: ChangeLog  az.po  de.po  fr.po  ru.po  sk.po  sv.po  zh_TW.po
pythons/: colors_quant.py
src/: Makefile.am  interface.c  main.c  main.h  render.c
